--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     }
   </style>
 
-  <link href="./trysintra.com/cdn/shop/t/5/assets/base.css?v=40303622665212993621686936879" rel="stylesheet"
+  <link href="./trysintra.com/cdn/shop/t/5/assets/base.css" rel="stylesheet"
     type="text/css" media="all" />
 
 
@@ -318,7 +318,7 @@
     href="./trysintra.com/cdn/fonts/harmonia_sans/harmoniasans_n6.dd3d6084d29e4754e80fe6aa1c0e37f511474ffa.woff2?h1=c2ludHJhbGFicy5hY2NvdW50Lm15c2hvcGlmeS5jb20&h2=dHJ5c2ludHJhLmNvbQ&h3=c2ludHJhLmFp&hmac=344d809e2a8f777e3b55877d3469b46303d111e43497ca9b73ff5394844d5889"
     type="font/woff2" crossorigin>
   <link rel="stylesheet"
-    href="./trysintra.com/cdn/shop/t/5/assets/component-predictive-search.css?v=83512081251802922551686936885"
+    href="./trysintra.com/cdn/shop/t/5/assets/component-predictive-search.css"
     media="print" onload="this.media='all'">
   <!-- <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
     if (Shopify.designMode) {
@@ -598,6 +598,7 @@
 
   <!-- END app app block -->
   <link href="https://monorail-edge.shopifysvc.com" rel="dns-prefetch">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -655,43 +656,43 @@
   </div>
   <div id="shopify-section-header" class="shopify-section section-header">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css?v=151968516119678728991686936888" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-search.css?v=96455689198851321781686936890" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-search.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-menu-drawer.css?v=182311192829367774911686936885"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-menu-drawer.css"
       media="print" onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-cart-notification.css?v=183358051719344305851686936886"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-cart-notification.css"
       media="print" onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-cart-items.css?v=23917223812499722491686936887" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-cart-items.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-price.css?v=65402837579211014041686936887" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-price.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-loading-overlay.css?v=167310470843593579841686936887"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-loading-overlay.css"
       media="print" onload="this.media='all'"><noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css?v=151968516119678728991686936888"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-search.css?v=96455689198851321781686936890"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-search.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-menu-drawer.css?v=182311192829367774911686936885"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-menu-drawer.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-cart-notification.css?v=183358051719344305851686936886"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-cart-notification.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-cart-items.css?v=23917223812499722491686936887"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-cart-items.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
 
@@ -1100,7 +1101,7 @@
     <link data-instant-track rel="stylesheet" type="text/css"
       href="https://d1um8515vdn9kb.cloudfront.net/files/vendor.css?refresh=1" class="gf-style" />
     <link data-instant-track rel="stylesheet" type="text/css"
-      href="./trysintra.com/cdn/shop/t/5/assets/gem-page-product-1698244638.css?v=141665374498880488951698415525"
+      href="./trysintra.com/cdn/shop/t/5/assets/gem-page-product-1698244638.css"
       class="gf_page_style">
     <link data-instant-track rel="stylesheet" type="text/css"
       href="https://d1um8515vdn9kb.cloudfront.net/libs/css/gfv3restabs.css" class="gf_libs">
@@ -9300,47 +9301,47 @@
   </main>
 
   <div id="shopify-section-footer" class="shopify-section">
-    <link href="./trysintra.com/cdn/shop/t/5/assets/section-footer.css?v=83777583229853969691686936885" rel="stylesheet"
+    <link href="./trysintra.com/cdn/shop/t/5/assets/section-footer.css" rel="stylesheet"
       type="text/css" media="all" />
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-newsletter.css?v=103472482056003053551686936883" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-newsletter.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css?v=151968516119678728991686936888" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css" media="print"
       onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-list-payment.css?v=69253961410771838501686936890"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-list-payment.css"
       media="print" onload="this.media='all'">
     <link rel="stylesheet"
-      href="./trysintra.com/cdn/shop/t/5/assets/component-list-social.css?v=52211663153726659061686936885" media="print"
+      href="./trysintra.com/cdn/shop/t/5/assets/component-list-social.css" media="print"
       onload="this.media='all'">
-    <link rel="stylesheet" href="./trysintra.com/cdn/shop/t/5/assets/component-rte.css?v=69919436638515329781686936886"
+    <link rel="stylesheet" href="./trysintra.com/cdn/shop/t/5/assets/component-rte.css"
       media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="./trysintra.com/cdn/shop/t/5/assets/disclosure.css?v=646595190999601341686936884"
+    <link rel="stylesheet" href="./trysintra.com/cdn/shop/t/5/assets/disclosure.css"
       media="print" onload="this.media='all'">
 
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-newsletter.css?v=103472482056003053551686936883"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-newsletter.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css?v=151968516119678728991686936888"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-menu.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-payment.css?v=69253961410771838501686936890"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-payment.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-social.css?v=52211663153726659061686936885"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-list-social.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/component-rte.css?v=69919436638515329781686936886"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/component-rte.css"
         rel="stylesheet" type="text/css" media="all" />
     </noscript>
     <noscript>
-      <link href="./trysintra.com/cdn/shop/t/5/assets/disclosure.css?v=646595190999601341686936884" rel="stylesheet"
+      <link href="./trysintra.com/cdn/shop/t/5/assets/disclosure.css" rel="stylesheet"
         type="text/css" media="all" />
     </noscript>
     <style data-shopify>
